fix: Fix sticky group row header z-index

--- a/src/app/data-grid/data-grid-grouped-row/data-grid-grouped-row.component.scss
+++ b/src/app/data-grid/data-grid-grouped-row/data-grid-grouped-row.component.scss
@@ -6,7 +6,7 @@
   display: flex;
   background-color: var(--dg-cell-bg);
   border-bottom: var(--dg-border-width) solid var(--dg-border-color);
-  z-index: 97;
+  z-index: 80;
 
   .dg-row-indentation {
     border: none !important;
